<resources>
    <!--    EditTaskScreen-->
    <string name="task_date_placeholder">MM/dd/yyyy</string>"
    <string name="task_time_placeholder">Pick a time</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="task_priority">Priority</string>
    <string name="selected_chip_icon_content_description">selected</string>
    <string name="get_alert_for_for_this_task">Get alert for this task</string>
    <string name="create_task">Create Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="back_button_content_description">Navigate back</string>
    <string name="edit_task">Edit your task</string>
    <string name="create_new_task">Create new task</string>
    <string name="select_date_content_description">Select date</string>
    <string name="select_time_content_description">Select time</string>

    <!--    Date and Time Picker-->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!--    ThemeScreen-->
    <string name="select_theme_content_description">Select theme</string>"

    <!-- SettingsScreen -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="change_mode">Change Mode</string>
    <string name="navigate_to_account_content_description">Navigate to Account</string>
    <string name="navigate_to_theme_content_description">Navigate to Theme</string>

    <string name="sign_out">Sign out</string>
    <string name="delete_my_account">Delete my account</string>

    <!--    Common-->
    <string name="account">Account</string>

    <!--    TasksScreen-->

    <string name="tasks">Tasks</string>
    <string name="navigate_to_settings_content_description">Navigate to Settings</string>
    <string name="select_year_content_description">Select year</string>"
    <string name="navigate_next_month_content_description">Navigate to next month</string>
    <string name="navigate_previous_month_content_description">Navigate to previous month</string>
    <string name="floating_action_button_add_content_description">Add task</string>

    <!-- Common -->
    <string name="app_name">TaskMinder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="generic_error">Something wrong happened. Please try again.</string>
    <string name="email_error">Please insert a valid email.</string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>
    <string name="password_field_end_icon_hide_content_description">Hide password</string>
    <string name="password_field_end_icon_show_content_description">Show password</string>

    <!-- LoginScreen -->
    <string name="sign_in">Sign in</string>
    <string name="login_details">Enter your login details</string>
    <string name="empty_password_error">Password cannot be empty.</string>

    <!-- SignUpScreen -->
    <string name="create_account">Create account</string>
    <string name="create_account_test">Create account Test</string>
    <string name="password_error">Your password should have at least six characters and include one digit, one lower case letter and one upper case letter.</string>
    <string name="password_match_error">Passwords do not match.</string>

    <!-- Dialogs -->
    <string name="sign_out_title">Sign out?</string>
    <string name="sign_out_description">You will have to sign in again to see your tasks.</string>
    <string name="delete_account_title">Delete account?</string>
    <string name="delete_account_description">You will lose all your tasks and your account will be deleted. This action is irreversible.</string>

    <!--    Semantics-->
    <string name="create_account_button_content_description">Create Account Button</string>
    <!-- FCM -->
    <!--    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>-->
    <!--    <string name="request_notification_permission">Request permission</string>-->
    <!--    <string name="notification_permission_title">Notification permission</string>-->
    <!--    <string name="notification_permission_description">The notification permission is important for this app. Please grant the permission.</string>-->
    <!--    <string name="notification_permission_settings">The notification permission is important for this app. Please navigate to your device settings and enable notifications for Make it So.</string>-->
</resources>